# kse-hackaton

./: .gitignore  Makefile  README.md  docker-compose.yaml  index.html  prometheus.yml  promtail-config.yaml
backend/: .dockerignore  database.sqlite  db.js  package-lock.json  package.json  pyproject.toml  server.js
backend/docker/: Dockerfile
backend/migrations/: 001_init_schema.sql  002_seed_mock_courses.sql
backend/requirements/: dev.txt
backend/scripts/: migrate.js
backend/src/: config.py  main.py  models.py
backend/src/admin/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  services.py
backend/src/auth/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  provider.py  router.py  schemas.py  services.py  utils.py
backend/src/database/: __init__.py  config.py  provider.py
backend/src/llm/: README.md  __init__.py  gemini.py
backend/src/middlewars/: config.py  exceptions.py  handlers.py
backend/src/users/: __init__.py  dependencies.py  exceptions.py  repository.py  router.py  schemas.py  services.py  utils.py
docker/: Dockerfile
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.jsx
grafana/: dashboards.yml
nginx/: default.conf
prompts/: ai-prompt.md  ai-response.md  how-to-analyze-files.md  technical-front.md  technical.md
requirements/: dev.txt
src/: index.css
src/voice/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  examples.sh  requirements.txt  test_main.py
src/voice/app/: main.py
